<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Coffee">New age</string>
    <string name="Crescent">Cuisine</string>
    <string name="Eiffel">Eiffel</string>
    <string name="Eiffeln">Eiffel Night</string>
    <string name="Fresh1">Overlay</string>
    <string name="Gloom">Savory</string>
    <string name="Hippie">Orchid</string>
    <string name="Matrix">Water</string>
    <string name="Memory">Memory</string>
    <string name="Newage">Hazel</string>
    <string name="Noir">Sketch</string>
    <string name="Nostalgia">Gloom</string>
    <string name="alert">Unsaved work.</string>
    <string name="app_name">ohmagiccamera</string>
    <string name="bg0">Color Pallete</string>
    <string name="bg1">Anchor</string>
    <string name="bg10">Calendula</string>
    <string name="bg11">Cherry</string>
    <string name="bg12">Chess</string>
    <string name="bg13">Christmas</string>
    <string name="bg14">Circle</string>
    <string name="bg15">Clubs</string>
    <string name="bg16">Digital</string>
    <string name="bg17">Enthic</string>
    <string name="bg18">Fabric</string>
    <string name="bg19">Floral</string>
    <string name="bg2">Animal</string>
    <string name="bg20">Gifts</string>
    <string name="bg21">Glitter</string>
    <string name="bg22">Golden Bubbles</string>
    <string name="bg23">Golden Texture</string>
    <string name="bg24">Green Leaf</string>
    <string name="bg25">Heart 1</string>
    <string name="bg26">Heart 2</string>
    <string name="bg27">Heart 3</string>
    <string name="bg28">Music</string>
    <string name="bg29">Rainbow</string>
    <string name="bg3">Apple</string>
    <string name="bg30">Stars</string>
    <string name="bg31">White Bubbles</string>
    <string name="bg32">Wonder</string>
    <string name="bg4">Autumn</string>
    <string name="bg5">Bells</string>
    <string name="bg6">Birtdays</string>
    <string name="bg7">Blossom</string>
    <string name="bg8">Bricks</string>
    <string name="bg9">Butterfly</string>
    <string name="birthday">Birthday</string>
    <string name="bluzzer">Bluzzer</string>
    <string name="bolly">Bolly</string>
    <string name="bubble">Bubble</string>
    <string name="cancel">cancel</string>
    <string name="cartoons">Cartoons</string>
    <string name="change_img">Change Image</string>
    <string name="close">Close</string>
    <string name="collage">Collage</string>
    <string name="color">Color</string>
    <string name="create_dir_err">"Can't create directory to save image."</string>
    <string name="crush">Crush</string>
    <string name="dark">Divine</string>
    <string name="dawa">London</string>
    <string name="del_error_toast">Error occurred during deletion.</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="double_tap">Double Tap To Edit</string>
    <string name="downloadin_file">Downloading file...</string>
    <string name="editor_border">Border</string>
    <string name="editor_brightness">Brightness</string>
    <string name="editor_color">Color</string>
    <string name="editor_compare">Compare</string>
    <string name="editor_contrast">Contrast</string>
    <string name="editor_crop">Crop</string>
    <string name="editor_custom">Custom</string>
    <string name="editor_dialog_msg">Something went wrong. Unable to load image. Please try again.</string>
    <string name="editor_dialog_title">Error</string>
    <string name="editor_effects">Effects</string>
    <string name="editor_enhance">Enhance</string>
    <string name="editor_frames">Frames</string>
    <string name="editor_header_text">Editor</string>
    <string name="editor_horizontalflip">Horizontal Flip</string>
    <string name="editor_leftrotate">Left Rotate</string>
    <string name="editor_ok">OK</string>
    <string name="editor_orientation">Orientation</string>
    <string name="editor_overlays">Overlays</string>
    <string name="editor_rightrotate">Right Rotate</string>
    <string name="editor_saturation">Saturation</string>
    <string name="editor_sharpness">Sharpness</string>
    <string name="editor_square">Square</string>
    <string name="editor_verticalflip">Vertical Flip</string>
    <string name="elset">Verdant</string>
    <string name="email_error">No email client installed.</string>
    <string name="email_msg">Write your problems or suggestions here..</string>
    <string name="enhance_img">Enhance Image</string>
    <string name="err_msg1">Something went wrong.</string>
    <string name="err_msg2">Please try again.</string>
    <string name="err_title">Error</string>
    <string name="error">Error</string>
    <string name="exit1">Exit</string>
    <string name="exit_app">Do you want to exit this app right now?</string>
    <string name="exit_cut_page">Do you want to exit without saving?</string>
    <string name="exit_title">Rate Collage Maker</string>
    <string name="exit_warning">Do you like Collage Maker? Would you give your rating and help us make the app even better?</string>
    <string name="f2">Crystal</string>
    <string name="festivals">Festivals</string>
    <string name="file_not_downloaded">Unable to download file. Please check your internet connection and try again.</string>
    <string name="filter_sunrise">Sunrise</string>
    <string name="filters">Filters</string>
    <string name="flash">Flash</string>
    <string name="free_collage">Free Collage</string>
    <string name="grid_collage">Grid Collage</string>
    <string name="hearts">Hearts</string>
    <string name="images">Images</string>
    <string name="koralle">Dawn</string>
    <string name="leaf">Leaf</string>
    <string name="lemo">Lemo</string>
    <string name="light">Smocked</string>
    <string name="love">Love</string>
    <string name="mono">Chocolate</string>
    <string name="more">More</string>
    <string name="music">Music</string>
    <string name="my_pics">My Pictures</string>
    <string name="no">No</string>
    <string name="no1">No thanks!</string>
    <string name="no_internet">No Internet</string>
    <string name="no_picture">No Picture Saved</string>
    <string name="none">none</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="party">Party</string>
    <string name="patterns">Background</string>
    <string name="permission">Permission!</string>
    <string name="permission_des">Grant these permissions to use Collage Maker</string>
    <string name="permission_des1">Note: You can also give permissions in Settings --> apps --> Collage Maker -->Permissions</string>
    <string name="pica">Spring</string>
    <string name="please_wait">Please wait</string>
    <string name="plzwait">Please Wait..</string>
    <string name="prism">Candy</string>
    <string name="privacypolicy"><u>Privacy</u><u>Policy</u></string>
    <string name="rangoli">Rangoli</string>
    <string name="rate">Rate</string>
    <string name="rate_msg">Liked this app? Please give us 5 star!</string>
    <string name="rate_msg1">Tell us, about your experience.</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_us">Rate Us</string>
    <string name="remove_watermark">Remove Watermark</string>
    <string name="remove_watermark_msg">" Remove Watermark for just "<b>5 Coins</b>". "</string>
    <string name="rouge">Autumn</string>
    <string name="rough">Rough</string>
    <string name="s1895">Warm</string>
    <string name="s1933">Ancient</string>
    <string name="sala">Film</string>
    <string name="save_image_">Saving image..</string>
    <string name="saved">Image saved to:</string>
    <string name="select_picture">Select Picture Using</string>
    <string name="selection_warning">Only ten images can be selected</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="sharetext">This amazing picture was created using</string>
    <string name="sharetext1">Make your own ..</string>
    <string name="shareusing">Share Picture Using..</string>
    <string name="slide">Tinted</string>
    <string name="something_wrong">Something went wrong. Please check your internet connection and try again.</string>
    <string name="star">Star</string>
    <string name="star12">Star</string>
    <string name="stickers">Stickers</string>
    <string name="storage">Storage</string>
    <string name="sugg_msg">Your suggestions are valuable to us, please email feedback..</string>
    <string name="sun">Sun</string>
    <string name="sunset">Sunset</string>
    <string name="text">Text</string>
    <string name="textlib_header_text">Add Text</string>
    <string name="textlib_warn_text">Please enter some text...</string>
    <string name="textlib_your_text">Your Text Here...</string>
    <string name="texts">Texts</string>
    <string name="tri">Cool</string>
    <string name="tuse">Zephyr</string>
    <string name="versa">Versa</string>
    <string name="watch_ad">Remove</string>
    <string name="wind">Soft Light</string>
    <string name="wow">Wow</string>
    <string name="x1">Light</string>
    <string name="x11">Sun</string>
    <string name="x2">Forest</string>
    <string name="x3">Fresh</string>
    <string name="x4">Elegant</string>
    <string name="x5">Tempting</string>
    <string name="x6">Past</string>
    <string name="x7">Black Tea</string>
    <string name="yes">Yes</string>
    <string name="yes1">Yes</string>
    <string name="youhave">You have:</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="more_link">moboandroapps</string>
    <string name="folder_name">Collage Maker</string>
    <string name="filter_none">Original</string>
</resources>