<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorMainBackground"
    android:layout_width="fill_parent"
    android:layout_height="250.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/header"
        android:background="@color/colorHeader"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip">

        <TextView
            android:textSize="25.0sp"
            android:textColor="#ffffffff"
            android:id="@+id/headertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_watermark"
            android:shadowColor="#ff000000"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <TextView
        android:textSize="20.0sp"
        android:textColor="#ff000000"
        android:gravity="center"
        android:id="@+id/remove_watermark_msg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:text="@string/remove_watermark_msg"
        android:layout_above="@+id/youhave"
        android:layout_below="@+id/header" />

    <TextView
        android:textSize="20.0sp"
        android:textColor="#ff000000"
        android:gravity="center"
        android:id="@+id/youhave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginBottom="5.0dip"
        android:text="@string/youhave"
        android:layout_above="@+id/ll" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_alignParentBottom="true">

        <Button
            android:textSize="15.0sp"
            android:textColor="#ffffffff"
            android:id="@+id/no_thanks"
            android:background="@color/colorHeader"
            android:paddingLeft="10.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="10.0dip"
            android:paddingBottom="2.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="@string/no1"
            android:layout_weight="1.0"
            android:textAllCaps="true" />

        <Button
            android:textSize="15.0sp"
            android:textColor="#ffffffff"
            android:id="@+id/watch_ad"
            android:background="@color/colorHeader"
            android:paddingLeft="10.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="10.0dip"
            android:paddingBottom="2.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:text="@string/watch_ad"
            android:layout_weight="1.0"
            android:textAllCaps="true" />
    </LinearLayout>
</RelativeLayout>