<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorEditorBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:background="@color/colorEditorHeader"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip">

            <TextView
                android:textSize="25.0sp"
                android:textColor="#ffffffff"
                android:id="@+id/headertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor_enhance"
                android:layout_centerInParent="true" />

            <ImageButton
                android:id="@+id/btn_bck"
                android:background="@drawable/editor_back"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />

            <Button
                android:id="@+id/done"
                android:background="@drawable/editor_done3"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:background="@color/colorEditorSelected"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_below="@+id/header" />

        <RelativeLayout
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="1.0dip"
            android:layout_below="@+id/header">

            <RelativeLayout
                android:gravity="center"
                android:id="@+id/rel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true">

                <jp.co.cyberagent.android.gpuimage.GPUImageView
                    android:layout_gravity="center"
                    android:id="@+id/gpuimage"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/image1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true" />

            <Button
                android:textSize="12.0sp"
                android:textColor="@color/colorEditorWhite"
                android:id="@+id/compare"
                android:background="@drawable/editor_compare_button"
                android:layout_width="70.0dip"
                android:layout_height="25.0dip"
                android:layout_margin="10.0dip"
                android:text="@string/editor_compare"
                android:textAllCaps="false" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/footer"
            android:background="#88263238"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_alignParentBottom="true">

            <View
                android:background="#ffffffff"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <TextView
                    android:textSize="15.0sp"
                    android:textColor="@color/colorEditorWhite"
                    android:id="@+id/cotext"
                    android:layout_width="110.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/editor_contrast"
                    android:textAllCaps="true" />

                <SeekBar
                    android:id="@+id/coseek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="50"
                    android:layout_toRightOf="@+id/cotext" />
            </LinearLayout>

            <View
                android:background="#ffffffff"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <TextView
                    android:textSize="15.0sp"
                    android:textColor="@color/colorEditorWhite"
                    android:id="@+id/brtext"
                    android:layout_width="110.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/editor_brightness"
                    android:textAllCaps="true" />

                <SeekBar
                    android:id="@+id/brseek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="50"
                    android:progress="25"
                    android:layout_toRightOf="@+id/brtext" />
            </LinearLayout>

            <View
                android:background="#ffffffff"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <TextView
                    android:textSize="15.0sp"
                    android:textColor="@color/colorEditorWhite"
                    android:id="@+id/satext"
                    android:layout_width="110.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/editor_saturation"
                    android:textAllCaps="true" />

                <SeekBar
                    android:id="@+id/saseek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="50"
                    android:layout_toRightOf="@+id/satext" />
            </LinearLayout>

            <View
                android:background="#ffffffff"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">

                <TextView
                    android:textSize="15.0sp"
                    android:textColor="@color/colorEditorWhite"
                    android:id="@+id/shtext"
                    android:layout_width="110.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/editor_sharpness"
                    android:textAllCaps="true" />

                <SeekBar
                    android:id="@+id/shseek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="50"
                    android:layout_toRightOf="@+id/shtext" />
            </LinearLayout>

            <View
                android:background="#ffffffff"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>